--- a/build.gradle
+++ b/build.gradle
@@ -12,4 +12,7 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
+
+    // Use Mockito
+    testImplementation 'org.mockito:mockito-core:2.+'
 }
