--- a/build.gradle
+++ b/build.gradle
@@ -1,18 +1,30 @@
+
 plugins {
+    // Apply the java plugin to add support for Java
     id 'java'
+
+    // Apply the application plugin to add support for building a CLI application.
+    id 'application'
 }
 
-version '1.0-SNAPSHOT'
-
-sourceCompatibility = 1.8
-
 repositories {
-    mavenCentral()
+    // Use jcenter for resolving dependencies.
+    // You can declare any Maven/Ivy/file repository here.
+    jcenter()
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    // This dependency is used by the application.
+    implementation 'com.google.guava:guava:28.0-jre'
+
+    // Use JUnit test framework
+    testImplementation 'junit:junit:4.12'
 
     // Use Mockito
     testImplementation 'org.mockito:mockito-core:2.+'
+}
+
+application {
+    // Define the main class for the application.
+    mainClassName = 'webserver.App'
 }
