Serving html pages for home, list, and 404
Change how hash map is created

Add procfile

Fix procfile and jar manifest

Use system port

add CRLF to response

Fix response lines

Add html pages

Refactor main class. Create socket creator class and socket handler class.

Refactor response to follow single responsibility

setup the response data to be sent

update gitignore

Remove commented out tests

--- a/build.gradle
+++ b/build.gradle
@@ -28,3 +28,10 @@ application {
     // Define the main class for the application.
     mainClassName = 'webserver.App'
 }
+
+jar {
+    manifest {
+        attributes 'Main-Class': 'webserver.App'
+
+    }
+}
