--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,18 @@
-build
+# Ignore Gradle project-specific cache directory
 .gradle
-.idea
-out
-*.iml
-*.ipr
-*.iws
+
+# Ignore Gradle build output directory
+build
+
+# Ignore VSCode directory
+.vscode
+
 .DS_Store
+
+# Ignore .class files
+*.class
+
+#Ignore intellij files
+.idea
+.settings
+.project
