--- a/build.gradle
+++ b/build.gradle
@@ -52,3 +52,8 @@ test {
         }
     }
 }
+
+run {
+    systemProperty 'port', System.getProperty('port')
+    systemProperty 'directory', System.getProperty('directory')
+}
