Create jar with all dependencies and null check directory argument

--- a/build.gradle
+++ b/build.gradle
@@ -39,7 +39,11 @@ jar {
         attributes 'Main-Class': 'webserver.App'
 
     }
+    from {
+        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
+    }
 }
+
 
 test {
     testLogging {
